# flash-image-analyzer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/prompts/: implement.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
samples/: create_simple_sample.py
scripts/: create_simple_sample.py
specs/001-scripts-create-simple/: spec.md
src/flash_img/: __init__.py  cli.py
src/flash_img/core/: __init__.py  analyzer.py  exceptions.py  models.py
src/flash_img/utils/: __init__.py  formatting.py
src/gangimg/: cli.py
src/gangimg/core/: exceptions.py
src/gangimg/utils/: __init__.py  validation.py
src/vmount/: __init__.py  cli.py
src/vmount/analyzers/: __init__.py  filesystem.py
src/vmount/core/: __init__.py  analyzer.py  exceptions.py  models.py
src/vmount/utils/: __init__.py  formatting.py  validation.py
tests/: __init__.py  test_cli.py  test_formatting.py  test_models.py  test_nvidia_analyzer.py  test_validation.py
tests/integration/: test_sample_analysis.py
